# stefan-studio

./: OPERATIONS-PLAN.md  README.md  project-rules.md
brand-kit/: CHANGELOG.md  CLAUDE-CODE-REVIEW-PROMPT.md  COWORK-INSTALL.md  INDEX.md  README.md  index.html
brand-kit/00-research/: dossier-2026-04-25.md
brand-kit/01-docs/: CLAUDE-DESIGN-RE-PROMPT.md  README.md  SKILL.md  component-copy-bank.md  foundation-brief.md  voice-system-v1.md
brand-kit/02-tokens/: colors_and_type.css  colors_and_type.dark.css
brand-kit/05-preview/: _card.css  brand-ampersand.html  brand-clearspace.html  brand-iconography.html  brand-voice.html  brand-wordmark-variants.html  brand-wordmark.html  colors-contrast.html  colors-onemark.html  colors-palette.html  colors-roles.html  components-buttons.html  components-card.html  components-footer.html  components-inputs.html  components-links.html  components-table.html  spacing-radii-shadow.html  spacing-rules.html  spacing-scale.html  type-body.html  type-display.html  type-families.html  type-mono.html  type-scale.html
brand-kit/06-holding-site/: README.md  index-print.html  index.html  site.css
brand-kit/07-deck/: Brand Kit Presentation.html
content/apollo/: README.md
content/apollo/atlas/: README.md  index.yaml
content/apollo/codex/: README.md  (+1 more)
mcp-server/: README.md  pyproject.toml  stefan_brand_mcp.py
skills/: README.md
skills/copy/: SKILL.md
skills/copy-stefan/: SKILL.md
tools/audit-2026-04-25/: README.md  apollo_audit.py  apollo_calibration.py  apollo_cleanup_v2.py  apollo_heavy_triage.py  apollo_summary.py
(+150 files in other folders)
