[project]
name = "stefan-brand-mcp"
version = "0.1.0"
description = "Local MCP server exposing Urso & Co canonical brand content to Claude surfaces"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
stefan-brand-mcp = "stefan_brand_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["stefan_brand_mcp.py"]
